--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body class="body page-index clearfix">
-  <p class="text">Testing</p>
+  <img class="image image-1" src="images/texas-24x24.png" data-rimage data-src="images/texas-24x24.png">
+  <p class="text text-1">Chemistry</p>
+  <img class="image image-2" src="images/texasam-24x24.png" data-rimage data-src="images/texasam-24x24.png">
+  <p class="text text-2">M.D</p>
+
+  <script src="js/jquery-min.js"></script>
+  <script src="js/rimages.js"></script>
 </body>
 </html>
